--- a/formacarti/pom.xml
+++ b/formacarti/pom.xml
@@ -12,6 +12,18 @@
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
+<distributionManagement>
+    <repository>
+      <id>release</id>
+      <url>http://192.168.86.176:8081/repository/maven-releases/</url>
+    </repository>
+    <snapshotRepository>
+      <id>snapshots</id>
+      <url>http://192.168.86.176:8081/repository/maven-snapshots/</url>
+    </snapshotRepository>
+  </distributionManagement>
+
+
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.7</maven.compiler.source>
